--- a/indext.html
+++ b/indext.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="app.js" defer></script>
     <title>Odd Duck Product Co.</title>
   </head>
@@ -27,6 +28,9 @@
         <img id="right-img" class="product-img" alt="" />
       </section>
       <button id="view-results" class="hidden">View Results</button>
+      <div>
+        <canvas id="myChart"></canvas>
+      </div>
     </main>
     <footer>
       <p>&copy; Odd Duck Product Co. 2023</p>
